--- a/templates/mall_map.html
+++ b/templates/mall_map.html
@@ -72,6 +72,28 @@
                             <p id="stall-count">Loading stalls...</p>
                         </div>
                     </div>
+
+                    <div class="map-legend">
+                        <h3>Legend</h3>
+                        <div class="legend-items">
+                            <div class="legend-item">
+                                <div class="legend-color stall occupied normal"></div>
+                                <span>Occupied Shop</span>
+                            </div>
+                            <div class="legend-item">
+                                <div class="legend-color stall vacant normal"></div>
+                                <span>Vacant Shop</span>
+                            </div>
+                            <div class="legend-item">
+                                <div class="legend-color stall alleyway"></div>
+                                <span>Alleyway</span>
+                            </div>
+                            <div class="legend-item">
+                                <div class="legend-color stall stairway"></div>
+                                <span>Stairway</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
